add custom view compass

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
         <item>拍照</item>
         <item>仿tab</item>
         <item>数字选择器</item>
-        <item>打开系统设置页面</item>
+        <item>水平仪</item>
         <item>Fragment切换示例</item>
         <item>条码扫描</item>
         <item>SystemUI变换示例</item>
